--- a/RustyRiot/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/RustyRiot/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -108,7 +108,7 @@ SnapScaleEnabled=False
 CurrentRotGridSize=6
 
 [EditorStartup]
-LastLevel=/Game/Levels/L_HD_YH
+LastLevel=/Game/Levels/L_Effects
 
 [AssetEditorManager]
 CleanShutdown=True
@@ -155,7 +155,7 @@ ContentBrowserTab1.ActiveTypeFilters=Material,ObjectRedirector,StaticMesh,Textur
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Levels
+ContentBrowserTab1.SelectedPaths=/Game/Assets/FX
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -932,7 +932,7 @@ SequencerWidgets.TimeStamp=2019.08.23-21.41.55
 SequencerWidgets.LastCompileMethod=Unknown
 
 [MessageLog]
-LastLogListing=LightingResults
+LastLogListing=LoadErrors
 
 [/Script/UnrealEd.EditorLoadingSavingSettings]
 AutoReimportDirectorySettings=(SourceDirectory="/Game/",MountPoint="",Wildcards=((Wildcard="Localization/*")))
@@ -954,13 +954,13 @@ InstalledPlugins=Substance
 InstalledPlugins=ToolbagImporter
 
 [MRU]
-MRUItem0=/Game/Levels/L_HD_YH
-MRUItem1=/Game/Levels/L_LD_JAB
-MRUItem2=/Game/Levels/L_HD_RDB
-MRUItem3=/Game/Levels/L_HD_HWL
-MRUItem4=/Game/Levels/L_HD_JAB
-MRUItem5=/Game/Levels/L_HD_LF
-MRUItem6=/Game/Levels/L_Effects
+MRUItem0=/Game/Levels/L_Effects
+MRUItem1=/Game/Levels/L_HD_YH
+MRUItem2=/Game/Levels/L_LD_JAB
+MRUItem3=/Game/Levels/L_HD_RDB
+MRUItem4=/Game/Levels/L_HD_HWL
+MRUItem5=/Game/Levels/L_HD_JAB
+MRUItem6=/Game/Levels/L_HD_LF
 MRUItem7=/Game/Levels/L_BuildingMaterials
 MRUItem8=/Game/Levels/Archive/L_BuildingMaterials
 MRUItem9=/Game/Levels/L_MD_JAB
@@ -968,26 +968,26 @@ MRUItem10=/Game/Levels/L_LD_RDB
 MRUItem11=/Game/Levels/Archive/L_Effects
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Levels/L_HD_YH
-MRUItem1=/Game/Levels/L_LD_JAB
-MRUItem2=/Game/Levels/L_HD_RDB
-MRUItem3=/Game/Levels/L_HD_HWL
-MRUItem4=/Game/Levels/L_HD_JAB
-MRUItem5=/Game/Levels/L_HD_LF
-MRUItem6=/Game/Assets/FX/ExplosionSystem
-MRUItem7=/Game/Assets/Materials/M_Basic
-MRUItem8=/Game/Assets/Materials/M_BaseColor_Normal_RDB
-MRUItem9=/Engine/BasicShapes/BasicShapeMaterial
-MRUItem10=/Game/Levels/L_Effects
-MRUItem11=/Game/Levels/L_BuildingMaterials
-MRUItem12=/Game/Levels/Archive/L_BuildingMaterials
-MRUItem13=/Game/Assets/StaticMesh/Buildings/SM_BridgeColumn_YH
-MRUItem14=/Game/Levels/L_MD_JAB
-MRUItem15=/Game/Levels/L_LD_RDB
-MRUItem16=/Game/Assets/Foliage/BrokenPlank2
-MRUItem17=/Game/Assets/StaticMesh/Wood/SM_riverwood_
-MRUItem18=/Game/Assets/StaticMesh/Rocks/SM_rocks__Rocks_02_YH
-MRUItem19=/Game/Assets/StaticMesh/Effects/SM_ToonRock_02
+MRUItem0=/Game/Assets/FX/Effect_02
+MRUItem1=/Game/Levels/L_Effects
+MRUItem2=/Game/Assets/FX/Effect_04
+MRUItem3=/Game/Levels/L_HD_YH
+MRUItem4=/Game/Levels/L_LD_JAB
+MRUItem5=/Game/Levels/L_HD_RDB
+MRUItem6=/Game/Levels/L_HD_HWL
+MRUItem7=/Game/Levels/L_HD_JAB
+MRUItem8=/Game/Levels/L_HD_LF
+MRUItem9=/Game/Assets/FX/ExplosionSystem
+MRUItem10=/Game/Assets/Materials/M_Basic
+MRUItem11=/Game/Assets/Materials/M_BaseColor_Normal_RDB
+MRUItem12=/Engine/BasicShapes/BasicShapeMaterial
+MRUItem13=/Game/Levels/L_BuildingMaterials
+MRUItem14=/Game/Levels/Archive/L_BuildingMaterials
+MRUItem15=/Game/Assets/StaticMesh/Buildings/SM_BridgeColumn_YH
+MRUItem16=/Game/Levels/L_MD_JAB
+MRUItem17=/Game/Levels/L_LD_RDB
+MRUItem18=/Game/Assets/Foliage/BrokenPlank2
+MRUItem19=/Game/Assets/StaticMesh/Wood/SM_riverwood_
 
 [DetailCategories]
 BP_PipeBuilder_C.Tick=True
@@ -1829,6 +1829,8 @@ BP_Meshes_Trees_JAB_C.Actor=True
 /Game/Assets/Materials/M_BaseColor_Normal_RDB.M_BaseColor_Normal_RDB=0
 /Engine/BasicShapes/BasicShapeMaterial.BasicShapeMaterial=0
 /Game/Assets/Materials/M_Basic.M_Basic=0
+/Game/Assets/FX/Effect_02.Effect_02=0
+/Game/Assets/FX/Effect_04.Effect_04=0
 
 [DetailCustomWidgetExpansion]
 CryptoKeysSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,IOSRuntimeSettings.Build.Remote Build Options,
@@ -1947,12 +1949,14 @@ BoxReflectionCapture="\"Object.DecalActor.CaptureComponent.Object.Tags.Component
 ReflectionCapture="\"Object.DecalActor.CaptureComponent.Object.Tags.ComponentTags\" "
 
 [PlacementMode]
+RecentlyPlaced=/Game/Assets/FX/Effect_04.Effect_04;
+RecentlyPlaced=/Game/Assets/FX/Effect_02.Effect_02;
+RecentlyPlaced=/Game/Assets/StaticMesh/SM_Car_Test.SM_Car_TEST;
 RecentlyPlaced=/Game/Assets/FX/Effect_01.Effect_01;
 RecentlyPlaced=/Game/Assets/Materials/M_Basic.M_Basic;
 RecentlyPlaced=/Game/Assets/Materials/M_Basic_RDB.M_Basic_RDB;
 RecentlyPlaced=/Game/Assets/Materials/M_ColorGradient_JAB.M_ColorGradient_JAB;
 RecentlyPlaced=/Engine/BasicShapes/Cylinder.Cylinder;/Engine/Transient.ActorFactoryBasicShape_0
-RecentlyPlaced=/Game/Assets/StaticMesh/SM_Car_Test.SM_Car_TEST;
 RecentlyPlaced=/Game/Assets/StaticMesh/Metal/SM_TankWreck_RDB.SM_TankWreck_RDB;
 RecentlyPlaced=/Game/Assets/StaticMesh/Foliage/SM_Leaf_JAB.SM_Leaf_JAB;
 RecentlyPlaced=/Game/Assets/StaticMesh/Foliage/SM_IvyLeaf_RDB.SM_IvyLeaf_RDB;
@@ -1965,8 +1969,6 @@ RecentlyPlaced=/Game/Assets/StaticMesh/Metal/SM_WindMill_Wings_JAB.SM_WindMill_W
 RecentlyPlaced=/Game/Assets/StaticMesh/Metal/SM_WindMill_Rotor_Full_JAB.SM_WindMill_Rotor_Full_JAB;
 RecentlyPlaced=/Game/Assets/StaticMesh/Metal/SM_TrainTrack_JAB.SM_TrainTrack_JAB;
 RecentlyPlaced=/Game/Assets/StaticMesh/Metal/SM_Tower__MetalTowerfence.SM_Tower__MetalTowerfence;
-RecentlyPlaced=/Game/Assets/StaticMesh/Metal/SM_Pipe_Joint_01_JAB.SM_Pipe_Joint_01_JAB;
-RecentlyPlaced=/Game/Assets/StaticMesh/Metal/SM_Pipe_01_JAB.SM_Pipe_01_JAB;
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bUseUnsortedMenus=False
