--- a/RustyRiot/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/RustyRiot/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -152,11 +152,11 @@ ContentBrowserTab1.HorizontalSplitter.SlotSize0=1.379882
 ContentBrowserTab1.HorizontalSplitter.SlotSize1=0.420117
 ContentBrowserTab1.FavoriteSplitter.SlotSize0=0.127978
 ContentBrowserTab1.FavoriteSplitter.SlotSize1=0.872022
-ContentBrowserTab1.ActiveTypeFilters=Material,ObjectRedirector,StaticMesh,Texture2D,World,NiagaraScript,NiagaraScript,NiagaraScript,DestructibleMesh
+ContentBrowserTab1.ActiveTypeFilters=Material,ObjectRedirector,StaticMesh,Texture2D,World,DestructibleMesh,NiagaraScript,NiagaraScript,NiagaraScript,SkeletalMesh,Skeleton,AnimSequence
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Assets/StaticMesh
+ContentBrowserTab1.SelectedPaths=/Game/Levels
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -187,13 +187,36 @@ ContentBrowserTab2.SelectedCollections=
 ContentBrowserTab2.ExpandedCollections=
 ContentBrowserTab2.ThumbnailSizeScale=0.180000
 ContentBrowserTab2.CurrentViewType=1
+SequenceBrowser.ActiveTypeFilters=
+SequenceBrowser.EnabledTypeFilters=
+SequenceBrowser.ActiveFrontendFilters=
+SequenceBrowser.EnabledFrontendFilters=
+SequenceBrowser.ThumbnailSizeScale=0.100000
+SequenceBrowser.CurrentViewType=2
+SequenceBrowser.HiddenColumns=Compression Ratio
+SequenceBrowser.HiddenColumns=Compressed Size (KB)
+SequenceBrowser.HiddenColumns=FrameRate
+SequenceBrowser.HiddenColumns=ImportFileFramerate
+SequenceBrowser.HiddenColumns=ImportResampleFramerate
+SequenceBrowser.HiddenColumns=NumFrames
+SequenceBrowser.HiddenColumns=AdditiveAnimType
+SequenceBrowser.HiddenColumns=RetargetSource
+SequenceBrowser.HiddenColumns=Interpolation
+SequenceBrowser.HiddenColumns=bEnableRootMotion
+SequenceBrowser.HiddenColumns=bUseNormalizedRootMotionScale
+SequenceBrowser.HiddenColumns=SequenceLength
+SequenceBrowser.HiddenColumns=Skeleton
+SequenceBrowser.HiddenColumns=ParentAsset
+SequenceBrowser.HiddenColumns=PreviewSkeletalMesh
+SequenceBrowser.HiddenColumns=CurveNameList
+SequenceBrowser.HiddenColumns=Class
 
 [Directories2]
 UNR=D:/GitHub/RustyRiotRepo/RustyRiot/Content/Levels
 BRUSH=../../../../../../Users/AlienBlood/Desktop/TEST/Content/
 FBX=../../../../../../Users/AlienBlood/Desktop/TEST/Content/
 FBXAnim=../../../../../../Users/AlienBlood/Desktop/TEST/Content/
-GenericImport=../../../../../../Users/n01309645/Desktop/SM_Grass_YH.fbx
+GenericImport=../../../../../../Users/AlienBlood/Desktop/PowerUP_Hit.fbx
 GenericExport=../../../../../../Users/n01309645/Desktop/SM_MERGED_SM__Romewall.FBX
 GenericOpen=../../../../../../Users/AlienBlood/Desktop/TEST/Content/
 GenericSave=../../../../../../Users/AlienBlood/Desktop/TEST/Content/
@@ -935,9 +958,13 @@ SkeletonEditor.TimeStamp=2020.02.25-17.12.30
 SkeletonEditor.LastCompileMethod=External
 PinnedCommandList.TimeStamp=2020.02.25-17.12.26
 PinnedCommandList.LastCompileMethod=External
+AnimationEditor.TimeStamp=2020.02.25-17.12.09
+AnimationEditor.LastCompileMethod=Unknown
+PhysicsAssetEditor.TimeStamp=2020.02.25-17.12.26
+PhysicsAssetEditor.LastCompileMethod=Unknown
 
 [MessageLog]
-LastLogListing=MapCheck
+LastLogListing=FBXImport
 
 [/Script/UnrealEd.EditorLoadingSavingSettings]
 AutoReimportDirectorySettings=(SourceDirectory="/Game/",MountPoint="",Wildcards=((Wildcard="Localization/*")))
@@ -960,10 +987,10 @@ InstalledPlugins=ToolbagImporter
 
 [MRU]
 MRUItem0=/Game/Levels/L_Effects
-MRUItem1=/Game/Levels/L_HD_RDB
-MRUItem2=/Game/Levels/L_LD_RDB
-MRUItem3=/Game/Levels/L_HD_JAB
-MRUItem4=/Game/Levels/L_LD_JAB
+MRUItem1=/Game/Levels/L_LD_JAB
+MRUItem2=/Game/Levels/L_HD_RDB
+MRUItem3=/Game/Levels/L_LD_RDB
+MRUItem4=/Game/Levels/L_HD_JAB
 MRUItem5=/Game/Levels/L_BuildingMaterials
 MRUItem6=/Game/Levels/L_HD_YH
 MRUItem7=/Game/Levels/L_Lobby
@@ -973,26 +1000,26 @@ MRUItem10=/Game/Levels/L_HD_LF
 MRUItem11=/Game/Levels/Archive/L_BuildingMaterials
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Assets/Materials/Effects/M_BasicRock
-MRUItem1=/Game/Assets/Materials/Effects/M_AssetPlatform
-MRUItem2=/Game/Assets/Materials/Effects/M_ToonExplosion
-MRUItem3=/Game/Assets/Materials/Effects/M_Sparks
-MRUItem4=/Game/Assets/Materials/Effects/M_Spark
-MRUItem5=/Game/Assets/Materials/Effects/M_ShockWaveDecals
-MRUItem6=/Game/Assets/Materials/Effects/M_ShockWave
-MRUItem7=/Game/Assets/Materials/Effects/M_MuzzleFlare
-MRUItem8=/Game/Assets/Materials/Effects/M_GunMuzzleFlash
-MRUItem9=/Game/Assets/Materials/Effects/M_FXCloud
-MRUItem10=/Game/Assets/Materials/Effects/m_flare_01
-MRUItem11=/Game/Assets/Materials/Effects/M_Fire_SubUV
-MRUItem12=/Game/Assets/Materials/Effects/M_Fire
-MRUItem13=/Game/Assets/Materials/Effects/M_CheapFXCloud
-MRUItem14=/Game/Assets/Materials/Effects/M_Burst
-MRUItem15=/Game/Levels/L_Effects
-MRUItem16=/Game/Assets/MaterialInstances/Effects/MI_Fire
-MRUItem17=/Game/Assets/FX/Emitters/EM_Flame_Thrower
-MRUItem18=/Game/Levels/L_HD_RDB
-MRUItem19=/Game/Levels/L_LD_RDB
+MRUItem0=/Game/Assets/AnimationSequence/AS_PowerUP_Hit
+MRUItem1=/Game/Levels/L_Effects
+MRUItem2=/Game/Assets/Materials/Effects/M_Burst
+MRUItem3=/Game/Assets/Textures/Effects/T_Fireball
+MRUItem4=/Game/Assets/StaticMesh/AAA/VVVDDDD_Anim
+MRUItem5=/Game/Assets/StaticMesh/AAA/VVVDDDD_PhysicsAsset
+MRUItem6=/Game/Assets/Materials/Effects/M_BasicRock
+MRUItem7=/Game/Assets/Materials/Effects/M_AssetPlatform
+MRUItem8=/Game/Assets/Materials/Effects/M_ToonExplosion
+MRUItem9=/Game/Assets/Materials/Effects/M_Sparks
+MRUItem10=/Game/Assets/Materials/Effects/M_Spark
+MRUItem11=/Game/Assets/Materials/Effects/M_ShockWaveDecals
+MRUItem12=/Game/Assets/Materials/Effects/M_ShockWave
+MRUItem13=/Game/Assets/Materials/Effects/M_MuzzleFlare
+MRUItem14=/Game/Assets/Materials/Effects/M_GunMuzzleFlash
+MRUItem15=/Game/Assets/Materials/Effects/M_FXCloud
+MRUItem16=/Game/Assets/Materials/Effects/m_flare_01
+MRUItem17=/Game/Assets/Materials/Effects/M_Fire_SubUV
+MRUItem18=/Game/Assets/Materials/Effects/M_Fire
+MRUItem19=/Game/Assets/Materials/Effects/M_CheapFXCloud
 
 [DetailCategories]
 BP_PipeBuilder_C.Tick=True
@@ -1829,6 +1856,26 @@ PrecomputedVisibilityVolume.Actor=True
 MaterialExpressionTextureSample.MaterialExpressionTextureSample=True
 MaterialExpressionTextureSample.MaterialExpressionTextureBase=True
 MaterialExpressionTextureSample.MaterialExpression=True
+AnimSequence.Animation=True
+AnimSequence.AdditiveSettings=True
+AnimSequence.Compression=True
+AnimSequence.RootMotion=True
+AnimSequence.ImportSettings=True
+AnimSequence.Transform=True
+AnimSequence.Miscellaneous=True
+AnimSequence.File Path=True
+AnimSequence.MetaData=True
+AnimSequence.Thumbnail=True
+PhysicsAssetGenerationSettings.Body Creation=True
+PhysicsAssetGenerationSettings.Constraint Creation=True
+ProceduralFoliageBlockingVolume.TransformCommon=True
+ProceduralFoliageBlockingVolume.ProceduralFoliage=True
+ProceduralFoliageBlockingVolume.Collision=True
+ProceduralFoliageBlockingVolume.Tags=True
+ProceduralFoliageBlockingVolume.Cooking=True
+ProceduralFoliageBlockingVolume.BrushSettings=True
+ProceduralFoliageBlockingVolume.Replication=True
+ProceduralFoliageBlockingVolume.Actor=True
 
 [AssetEditorToolkitTabLocation]
 /Game/Assets/ART_Blueprints/Asset_BP/BP_PipeBuilder.BP_PipeBuilder=0
@@ -1955,6 +2002,8 @@ MaterialExpressionTextureSample.MaterialExpression=True
 /Game/Assets/Materials/Effects/m_flare_01.M_Flare_01=0
 /Game/Assets/Materials/Effects/M_Fire_SubUV.M_Fire_SubUV=0
 /Game/Assets/Materials/Effects/M_CheapFXCloud.M_CheapFXCloud=0
+/Game/Assets/Textures/Effects/T_Fireball.T_Fireball=1
+/Game/Assets/AnimationSequence/AS_PowerUP_Hit.AS_PowerUP_Hit=1
 
 [DetailCustomWidgetExpansion]
 CryptoKeysSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,IOSRuntimeSettings.Build.Remote Build Options,
@@ -2030,7 +2079,7 @@ PreviewMeshCollection=AssetViewerSettings.Settings.Lighting,AssetViewerSettings.
 
 [DetailPropertyExpansion]
 EditorStyleSettings="\"Object.Colors.EditorMainWindowBackgroundOverride\" \"Object.Colors.EditorMainWindowBackgroundOverride.TintColor\" \"Object.Colors.EditorChildWindowBackgroundOverride\" \"Object.Colors.EditorChildWindowBackgroundOverride.TintColor\" "
-Object="\"Object.ImportSettings.AssetImportData\" "
+Object=
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.AutoReimport.AutoReimportDirectorySettings\" \"Object.AutoReimport.AutoReimportDirectorySettings.AutoReimportDirectorySettings[0]\" \"Object.Blueprints\" \"Object.AutoSave\" "
 EditorTutorialSettings="\"Object.Tutorials.Categories\" \"Object.Tutorials.Categories.Categories[0]\" \"Object.Tutorials.Categories.Categories[1]\" \"Object.Tutorials.Categories.Categories[2]\" \"Object.Tutorials.Categories.Categories[3]\" \"Object.Tutorials.Categories.Categories[4]\" \"Object.Tutorials.Categories.Categories[5]\" \"Object.Tutorials.Categories.Categories[6]\" \"Object.Tutorials.Categories.Categories[7]\" \"Object.Tutorials.Categories.Categories[8]\" \"Object.Tutorials.TutorialContexts\" \"Object.Tutorials.TutorialContexts.TutorialContexts[0]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[1]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[2]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[3]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[4]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[5]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[6]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[7]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[8]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[9]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[10]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[11]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[12]\" "
 LevelEditorViewportSettings="\"Object.GridSnapping.DecimalGridSizes\" \"Object.GridSnapping.DecimalGridIntervals\" \"Object.GridSnapping.Pow2GridSizes\" \"Object.GridSnapping.Pow2GridIntervals\" \"Object.GridSnapping.CommonRotGridSizes\" \"Object.GridSnapping.DivisionsOf360RotGridSizes\" \"Object.Preview.PreviewMeshes\" "
@@ -2079,10 +2128,12 @@ CameraActor="\"Object.Current Camera Settings.LookatTrackingSettings\" \"Object.
 PreviewMeshCollection="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 DataAsset="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 PrecomputedVisibilityVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+ProceduralFoliageBlockingVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 
 [PlacementMode]
-RecentlyPlaced=/Game/Assets/FX/VFX_06_MustardGas.VFX_06_MustardGas;
 RecentlyPlaced=/Game/Assets/FX/VFX_01_RockExplosion.VFX_01_RockExplosion;
+RecentlyPlaced=/Game/Assets/StaticMesh/AAA/VVVDDDD_Anim.VVVDDDD_Anim;
+RecentlyPlaced=/Game/Assets/FX/VFX_06_MustardGas.VFX_06_MustardGas;
 RecentlyPlaced=/Game/Assets/FX/VFX_02_FlamThrowere.VFX_02_FlamThrowere;
 RecentlyPlaced=/Game/Assets/FX/VFX_04_DrillSparks.VFX_04_DrillSparks;
 RecentlyPlaced=/Game/Assets/FX/VFX_05_RocketSmoke.VFX_05_RocketSmoke;
@@ -2100,7 +2151,6 @@ RecentlyPlaced=/Game/Assets/Materials/M_Basic_RDB.M_Basic_RDB;
 RecentlyPlaced=/Game/Assets/Materials/M_ColorGradient_JAB.M_ColorGradient_JAB;
 RecentlyPlaced=/Engine/BasicShapes/Cylinder.Cylinder;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/Assets/StaticMesh/Metal/SM_TankWreck_RDB.SM_TankWreck_RDB;
-RecentlyPlaced=/Game/Assets/StaticMesh/Foliage/SM_Leaf_JAB.SM_Leaf_JAB;
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bUseUnsortedMenus=False
@@ -2184,6 +2234,7 @@ LodDistance4=0.000000
 LodDistance5=0.000000
 LodDistance6=0.000000
 LodDistance7=0.000000
+bImportAnimations=True
 
 [FBX_Export_UI_Option_FbxExportOption]
 FbxExportCompatibility=FBX_2013
@@ -2333,6 +2384,10 @@ Contexts=(Name="SkeletonEditor",Commands=)
 Contexts=(Name="SkeletonEditor.Viewport0",Commands=)
 Contexts=(Name="SkeletalMeshEditor",Commands=)
 Contexts=(Name="SkeletalMeshEditor.Viewport0",Commands=)
+Contexts=(Name="AnimationEditor",Commands=)
+Contexts=(Name="AnimationEditor.Viewport0",Commands=)
+Contexts=(Name="PhysicsAssetEditor",Commands=)
+Contexts=(Name="PhysicsAssetEditor.Viewport0",Commands=)
 
 [/Script/UnrealEd.LevelEditorMiscSettings]
 bEnableRealTimeAudio=True
